Prevent searchbar jumping when loading front page

--- a/website/static/sass/front.sass
+++ b/website/static/sass/front.sass
@@ -77,6 +77,7 @@ $frame_h: 390px
     position: relative
 
   .logo
+    height: 200px
     user-select: none
 
   .website-name
